# quantx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: 01_basic_search.py  02_basic_search_ibm.py
quantumeasy/: __init__.py  _validators.py  backends.py  exceptions.py  search.py  utils.py
quantumexamples/: 01_bell_state.py  02_deutsch_joshi.py  03_grovers_search.py  04_quantum_teleportation.py  05_quantum_calculator.py
quantx/: __init__.py  _validators.py  backends.py  exceptions.py  search.py  utils.py
tests/: test_search.py
