[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantxlib"
version = "0.1.1"
description = "Quantum computing for everyone — use quantum algorithms without knowing quantum mechanics."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aarav Chourishi" },
]
keywords = ["quantum", "computing", "qiskit", "grover", "algorithm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "numpy>=1.21",
]

[project.optional-dependencies]
ibm = ["qiskit-ibm-runtime>=0.20"]
ml = ["scikit-learn>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/aaravchourishi/quantx"
Issues = "https://github.com/aaravchourishi/quantx/issues"

[tool.setuptools.packages.find]
include = ["quantx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
